address sonarlint issues and remove unused code